--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+# Ignore styles.css file
+styles.css
